[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/theme.tres" type="Theme" id=1]
[ext_resource path="res://menu/main.gd" type="Script" id=2]
[ext_resource path="res://fonts/default_4.tres" type="DynamicFont" id=3]
[ext_resource path="res://menu/update_checker.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -300.0
margin_right = 108.0
margin_bottom = 300.0
grow_horizontal = 2
custom_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer" groups=[
"makes_sound",
]]
margin_top = 226.0
margin_right = 216.0
margin_bottom = 262.0
grow_horizontal = 2
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer" groups=[
"makes_sound",
]]
margin_top = 282.0
margin_right = 216.0
margin_bottom = 318.0
grow_horizontal = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer" groups=[
"makes_sound",
]]
margin_top = 338.0
margin_right = 216.0
margin_bottom = 374.0
grow_horizontal = 2
text = "Quit"

[node name="Credits" type="Button" parent="." groups=[
"makes_sound",
]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -34.0
margin_right = 108.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Credits"
flat = true

[node name="UpdateChecker" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -162.0
margin_top = -43.0
margin_right = -19.0
margin_bottom = -12.0

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
